--- a/style.css
+++ b/style.css
@@ -30,15 +30,26 @@ body {
 
 .popup {
     position: absolute;
-    top: 50%;
+    top: -150%;
     left: 50%;
     transform: translate(-50%, -50%); 
-    width: 400px;
+    min-width: 400px;
     padding: 20px 30px;
     border: 1px solid;
     background: skyblue;
     box-shadow: 2px 2px 5px 5px gray;
     border-radius: 5px;
+    transition: top 0ms ease-in-out 200ms,
+                opacity 200ms ease-in-out 0ms,
+                transform 20ms ease-in-out 0ms;
+}
+
+.popup.active {
+    top: 50%;
+    transform: translate(-50%, -50%);
+    transition: top 0ms ease-in-out 0ms,
+                opacity 200ms ease-in-out 0ms,
+                transform 20ms ease-in-out 0ms;
 }
 
 .popup .close-btn{
@@ -63,4 +74,27 @@ body {
 
 .popup .form .form-element label {
     font-size: 0.9em;
+}
+
+.popup .form .form-element input[type="text"] {
+    margin-top:5px;
+    display: flex;
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.popup .form .form-element textarea {
+    display: flex;
+    width: 100%;
+}
+
+.popup .form .form-element button {
+   width: 100%;
+   padding: 10px;
+   border-radius: 5px;
+   border: none;
+   font-weight: 600;
+   color: aquamarine;
+   background: black;
 }
